# libstaroffice

./: .gitignore  CHANGES  CREDITS  HACKING  Makefile.am  NEWS  README  autogen.sh  configure.ac  libstaroffice-zip.in  libstaroffice.pc.in  libstaroffice.spec.in
docs/doxygen/: Makefile.am  doxygen.cfg
inc/: Makefile.am
inc/libstaroffice/: Makefile.am  STOFFDocument.hxx  libstaroffice.hxx
regression/: regenerate_raw.pl  regression.pl
regression/Calc3.1/: go-oox-3.sdc  go-oox-3.sdc.raw  go-oox-3.sdc.writerperfect  nimp.sdc.csv  nimp.sdc.raw  nimp.sdc.writerperfect  regression.in  testChartForm.sdc  testChartForm.sdc.csv  testChartForm.sdc.raw  testChartForm.sdc.writerperfect
regression/Calc4/: go-oox-4.sdc  go-oox-4.sdc.raw  go-oox-4.sdc.writerperfect  regression.in
regression/Calc5/: go-oox-5.sdc  go-oox-5.sdc.csv  go-oox-5.sdc.raw  go-oox-5.sdc.writerperfect  regression.in
regression/Draw3.1/: Elternabend1998.sdd  Elternabend1998.sdd.raw  Elternabend1998.sdd.writerperfect  bunterZettel.sdd  bunterZettel.sdd.raw  bunterZettel.sdd.writerperfect  patf11.sdd  patf11.sdd.raw  patf11.sdd.writerperfect  patfig2.sdd  patfig2.sdd.raw  patfig2.sdd.writerperfect  projekt.sdd  projekt.sdd.raw  projekt.sdd.writerperfect  regression.in  testGraph.sda.raw  testGraph.sda.writerperfect  testSlide.sda  testSlide.sda.raw  testSlide.sda.writerperfect
regression/Draw4/: Bevoelkerung.sdd  Bevoelkerung.sdd.raw  Bevoelkerung.sdd.writerperfect  Geburtenrate.sdd  Geburtenrate.sdd.raw  Geburtenrate.sdd.writerperfect  go-oox-4.sdd  go-oox-4.sdd.raw  go-oox-4.sdd.writerperfect  regression.in
regression/Draw5/: LWE-Dublin.sda.raw  LWE-Dublin.sda.writerperfect  go-oox-5.sdd  go-oox-5.sdd.raw  go-oox-5.sdd.writerperfect  regression.in  testField.sda  testField.sda.raw  testField.sda.writerperfect
regression/Pres5/: LWE-Dublin.sda  LWE-Dublin.sda.raw  LWE-Dublin.sda.writerperfect  go-oox-5.sdd.raw  go-oox-5.sdd.writerperfect  regression.in
regression/Text3.1/: begrvw1.sdw  begrvw1.sdw.html  begrvw1.sdw.raw  begrvw1.sdw.writerperfect  go-oox-3.sdw  go-oox-3.sdw.html  go-oox-3.sdw.raw  go-oox-3.sdw.writerperfect  regression.in  rousseau.sdw  rousseau.sdw.html  rousseau.sdw.raw  rousseau.sdw.writerperfect  testText.sdw  testText.sdw.html  testText.sdw.raw  testText.sdw.writerperfect  testText1.sdw.html  testText1.sdw.raw  testText1.sdw.writerperfect
regression/Text4/: Lutherreferat-handout.sdw  Lutherreferat-handout.sdw.html  Lutherreferat-handout.sdw.raw  Lutherreferat-handout.sdw.writerperfect  OttoI3.sdw  OttoI3.sdw.html  OttoI3.sdw.raw  OttoI3.sdw.writerperfect  go-oox-4.sdw  go-oox-4.sdw.raw  go-oox-4.sdw.writerperfect  regression.in
regression/Text5/: Geschichte-der-NGOs-Schaubild.sdw  Geschichte-der-NGOs-Schaubild.sdw.html  Geschichte-der-NGOs-Schaubild.sdw.raw  Geschichte-der-NGOs-Schaubild.sdw.writerperfect  SATZUNG.sdw  SATZUNG.sdw.html  SATZUNG.sdw.raw  SATZUNG.sdw.writerperfect  echo.sdw  echo.sdw.html  echo.sdw.raw  echo.sdw.writerperfect  go-oox-5.sdw  go-oox-5.sdw.html  go-oox-5.sdw.raw  go-oox-5.sdw.writerperfect  hodenius1.sdw  hodenius1.sdw.html  hodenius1.sdw.raw  hodenius1.sdw.writerperfect  rc3-whitepaper-1.0-4.sdw  rc3-whitepaper-1.0-4.sdw.html  rc3-whitepaper-1.0-4.sdw.raw  rc3-whitepaper-1.0-4.sdw.writerperfect  regression.in  telemarketing.sdw  telemarketing.sdw.html  telemarketing.sdw.raw  telemarketing.sdw.writerperfect  testAnchor.sdw  testAnchor.sdw.html  testAnchor.sdw.raw  testAnchor.sdw.writerperfect  xml-merge.sdw  xml-merge.sdw.html  xml-merge.sdw.raw  xml-merge.sdw.writerperfect
src/: Makefile.am
src/conv/: Makefile.am
src/conv/sd2raw/: .gitignore  Makefile.am  sd2raw.cpp  sd2raw.rc.in
src/conv/sd2svg/: .gitignore  Makefile.am  sd2svg.cpp  sd2svg.rc.in
src/conv/sd2text/: .gitignore  Makefile.am  sd2text.cpp  sd2text.rc.in
src/conv/sdc2csv/: .gitignore  Makefile.am  sdc2csv.cpp  sdc2csv.rc.in
src/conv/sdw2html/: .gitignore  Makefile.am  sdw2html.cpp  sdw2html.rc.in
src/conv/sdw2raw/: .gitignore  Makefile.am  sdw2raw.cpp  sdw2raw.rc.in
src/conv/sdw2text/: .gitignore  Makefile.am  sdw2text.cpp  sdw2text.rc.in
src/fuzz/: Makefile.am  sdafuzzer.cpp  sdcfuzzer.cpp  sddfuzzer.cpp  sdwfuzzer.cpp
src/lib/: Makefile.am  SDAParser.cxx  SDAParser.hxx  SDCParser.cxx  SDCParser.hxx  SDDParser.cxx  SDDParser.hxx  SDGParser.cxx  SDGParser.hxx  SDWParser.cxx  SDWParser.hxx  SDXParser.cxx  SDXParser.hxx  STOFFCell.cxx  STOFFCell.hxx  STOFFCellStyle.cxx  STOFFCellStyle.hxx  STOFFChart.cxx  STOFFChart.hxx  STOFFDebug.cxx  STOFFDebug.hxx  STOFFDocument.cxx  STOFFEntry.cxx  STOFFEntry.hxx  STOFFFont.cxx  STOFFFont.hxx  STOFFFrameStyle.cxx  STOFFFrameStyle.hxx  STOFFGraphicDecoder.cxx  STOFFGraphicDecoder.hxx  STOFFGraphicEncoder.cxx  STOFFGraphicEncoder.hxx  STOFFGraphicListener.cxx  STOFFGraphicListener.hxx  STOFFGraphicShape.cxx  STOFFGraphicShape.hxx  STOFFGraphicStyle.cxx  STOFFGraphicStyle.hxx  STOFFHeader.cxx  STOFFHeader.hxx  (+127 more)
